# vmklib

./: .gitignore  .pylintrc  Makefile  README.md  conf.mk  datazen.mk  functions.mk  grip.mk  manifest.yaml  mypy.ini  pypi.mk  pyproject.toml  python.mk  run.py  setup.py  venv.mk
.github/workflows/: python-package.yml
local/configs/: license.yaml  package.yaml  python.yaml
local/configs/targets/groups/: datazen.yaml  grip.yaml  pypi.yaml  python.yaml  venv.yaml  vmklib.yaml  yaml.yaml
local/schema_types/: namedesc.yaml
local/schemas/: targets.yaml
local/templates/: README.md.j2  header.mk.j2
local/variables/: package.yaml
mk/: __init__.py  app.py  entry.py
mk/data/: datazen.mk
mk/srcs/: python.mk  venv.mk
mk/srcs/data/: fresh_venv.txt
src/: conf.mk  venv.mk
tasks/: conf.py  release.py
tests/: __init__.py  test_entry.py  test_setup.py
tests/data/: Makefile
tests/data/python-tasks/: README.md  pyproject.toml
tests/data/python-tasks/python_tasks/: __init__.py  dev_requirements.txt
tests/data/python-tasks/tests/: test_add.py
tests/data/test-scenario/: Makefile  vmklib.json
tests/data/test-scenario/tasks/: conf.py
tests/task/: test_task.py
tests/task/dict/: test_merger.py
tests/tasks/: test_clean.py  test_github.py
tests/tasks/mixins/: test_curl.py
tests/tasks/node/: test_node.py
vmklib/: __init__.py  __main__.py  app.py  dev_requirements.txt  entry.py  requirements.txt  resources.py  setup.py  util.py
vmklib/data/: conf.mk  datazen.mk  functions.mk  grip.mk  pypi.mk  python.mk  time.mk  venv.mk  vmklib.mk  yaml.mk
vmklib/data/data/: edit_venv.txt  fresh_venv.txt  header.mk
vmklib/data/lib_tasks/: conf.py
vmklib/data/python/: build.mk  docs.mk  upload.mk
vmklib/data/tasks/: conf.py
vmklib/task/dict/: melder.py
vmklib/tasks/: __init__.py  args.py  clean.py  github.py  python.py  release.py  venv.py
vmklib/tasks/mixins/: __init__.py  concrete.py  curl.py
vmklib/tasks/node/: __init__.py
vmklib/tasks/python/: __init__.py  build.py  datazen.py  docs.py  lint.py  package.py  release.py  sa.py  test.py  yaml.py
