[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "vmklib"
version = "1.6.2"
description = "Simplify project workflows by standardizing use of GNU Make."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = [
  "workflow",
  "tool",
  "make"
]
authors = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "vcorelib"
]

[project.optional-dependencies]
test = [
  "setuptools-wrapper",
  "pylint",
  "flake8",
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "isort"
]

[project.scripts]
mk = "vmklib.entry:main"
