[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "vmklib"
version = "2.0.5"
description = "Simplify project workflows by standardizing use of GNU Make."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = [
  "workflow",
  "tool",
  "make"
]
authors = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughn@libre-embedded.com"}
]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License"
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  "pylint",
  "flake8",
  "black",
  "ruff",
  "mypy",
  "isort",
  "yamllint",
  "yambs",
  "vmklib>=2.0.3",
  "sphinx",
  "sphinx-book-theme",
  "pytest-asyncio",
  "setuptools-wrapper"
]

[project.scripts]
mk = "vmklib.entry:main"
