[build-system]
requires = ["setuptools-wrapper", "trove-classifiers"]

[project]
name = "python-tasks"
version = "0.1.0"
description = "Mock package."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = []
authors = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License"
]
dependencies = []

[tool.setuptools]
packages = ["python_tasks"]
